# ai-daily-briefing

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: daily.yml
src/: delivery.py  llm.py  main.py  models.py
src/sources/: arxiv.py  base.py  github_trending.py  hackernews.py
src/templates/: briefing.html
